--- a/site.css
+++ b/site.css
@@ -18,6 +18,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: 100% 100%;
-    margin-bottom: 60px;
+    background-size:cover;
+    margin-bottom: auto;
 }
