--- a/wrapper.css
+++ b/wrapper.css
@@ -3,6 +3,7 @@
     text-shadow: 3px 2px 10px #93B3FD;
     text-align: center;
     font-family: 'Comic Sans MS';
+    resize: both;
 }
 
 .wrappertxt {
