--- a/wrapper.css
+++ b/wrapper.css
@@ -13,6 +13,7 @@
     font-size: 20px;
     font-family: 'Courier New';
     text-shadow: 3px 2px 7px #C0C0C0;
+    position: absolute;
 }
 
 .wrapperstory{
