--- a/site.css
+++ b/site.css
@@ -1,24 +1,14 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  height: fit-content;
-}
-
 body {
-  width: 100%;
-  height: 100%;
   background-image: url(https://i.ibb.co/7pVHjYj/Blurred.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   margin-bottom: auto;
+}
+
+.mainhtml
+{
+  width: 100%;
+  height: 100%;
 }
