--- a/site.css
+++ b/site.css
@@ -1,8 +1,21 @@
 body {
+  margin: 0%;
   background-image: url(https://i.ibb.co/7pVHjYj/Blurred.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;
-  margin-bottom: auto;
+  background-size: 100%;
+}
+
+.navbar
+{
+  background-color:black;
+  size: 20%;
+}
+
+.navbarimg
+{
+  width: 10%;
+  height: 15%;
+
 }
