--- a/wrapper.css
+++ b/wrapper.css
@@ -1,9 +1,4 @@
-﻿.wrapper{
-    height: 100%;
-    width: 100%;
-}
-
-.wrappertitle {
+﻿.wrappertitle {
     color: white;
     text-shadow: 3px 2px 10px #93B3FD;
     text-align: center;
@@ -14,7 +9,7 @@
     font-size: 20px;
     font-family: 'Courier New';
     text-shadow: 3px 2px 7px #C0C0C0;
-    position: absolute;
+
 }
 
 .wrapperstory{
@@ -27,7 +22,7 @@
 
 .wrapperwm {
     position: relative;
-    right: -950px;
+    right: -400%;
 }
 
 @keyframes spin{
@@ -45,7 +40,7 @@
 @keyframes hoverDw{
     from 
     {
-        transform: translateY(-400px);
+        transform: translateY(-500%);
     }
 
     to 
