Wrappertxt and Wrappertitle
Both now fixed for mobile!

--- a/wrapper.css
+++ b/wrapper.css
@@ -3,13 +3,14 @@
     text-shadow: 3px 2px 10px #93B3FD;
     text-align: center;
     font-family: 'Comic Sans MS';
+    font-size: 3vw;
 }
 
 .wrappertxt {
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: 'Courier New';
     text-shadow: 3px 2px 7px #C0C0C0;
-
+    text-align: left;
 }
 
 .wrapperstory{
