--- a/site.css
+++ b/site.css
@@ -6,11 +6,6 @@ body {
   background-size: 100%;
 }
 
-form
-{
-  height: 100%;
-}
-
 .navbar
 {
   background-color:black;
@@ -28,7 +23,8 @@ form
   background-color: black;
   color: white;
   font-family: 'Times New Roman', Times, serif;
+  font-size: 0.9vw;
   bottom: 0%;
-  position: fixed;
   width: 100%;
+  height: 2vw;
 }
