--- a/AS.css
+++ b/AS.css
@@ -1,12 +1,7 @@
-﻿.VSMtitle {
+.AStitle {
     color: white;
     text-shadow: 3px 2px 10px #93B3FD;
     text-align: center;
     font-family: 'Comic Sans MS';
     font-size: 2.5vw;
-}
-
-.social-media-link{
-    width: 3vw;
-    height: 2vw;
 }
