--- a/css/site.css
+++ b/css/site.css
@@ -3,24 +3,19 @@ body {
   background-image: url(https://i.ibb.co/7pVHjYj/Blurred.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vw;
-  size: 100vw
-}
-
-html{
-  size: 100vw;
+  background-size: 100%
 }
 
 .navbar
 {
   background-color:black;
-  size: 20%;
+  height: 5vh;
 }
 
 .navbarimg
 {
-  width: 10%;
-  height: 15%;
+  width: 5vw;
+  height: 4vh;
 }
 
 .footer
@@ -30,6 +25,5 @@ html{
   font-family: 'Times New Roman', Times, serif;
   font-size: 0.9vw;
   bottom: 0vw;
-  width: 100%;
   height: 2vw;
 }
