--- a/css/site.css
+++ b/css/site.css
@@ -6,6 +6,19 @@ body {
   background-size: 100%
 }
 
+@media screen and (orientation: portrait) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
+
 .navbar
 {
   background-color:black;
